src/tui/snapshots/yaks__tui__tests__collapsed_root_hides_children.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Root A                                         ▶ 1










Tab:view  j/k:move  l:detail  h:family  v:views  c/C:new  E:edit  X:del
