src/tui/snapshots/yaks__tui__tests__create_form_long_title_scrolls_horizontally.snap
---
source: src/tui/tests.rs
expression: frame
---
 🦬  Hairy (1)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (1)   ⭐  Starr

 e0   p3 task     [rust,│ New yak
                        │ ▸ title        past the edge of the form END
                        │   type         task bug feature idea
                        │   priority     p1 p2 p3 p4 p5
                        │   labels
                        │   source
                        │   description ───────────────────────────────
                        │ (no description)
                        │
                        │
                        │
Tab/↑↓ rows · ←→ chips · Ctrl-S create · EscEsc/Ctrl-C cancel
