src/tui/snapshots/yaks__tui__tests__create_form_source_field.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (1)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (1)   ⭐  Starr

◂ New yak
│   title       linked
│   type         task bug feature idea
│   priority     p1 p2 p3 p4 p5
│   labels
│ ▸ source      https://example.com/PROJ-1
│   description ───────────────────────────────────────────────────────
│ (no description)
│
│
│
Tab/↑↓ rows · ←→ chips · Ctrl-S create · EscEsc/Ctrl-C cancel
