src/tui/snapshots/yaks__tui__tests__dep_picker_overlay.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

◂ Add dependency to a0  (3 matches)
│ 🪒   b0 Root B shaving
│ 🦬   a1 Child A1
│ 🐑   a2 Child A2 done
│
│
│
│
│
│
│
search:
