src/tui/snapshots/yaks__tui__tests__detail_find_overlay.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy (3)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (3)   ⭐  Starr

◂  🦬  a0  task     p2  Root A
│ Children:
│   🦬  a1  Child A1
│   🦬  a2  Child A2
│
│ follow a1 then a2
│
│
│
│
│
│
│
find: child
