src/tui/snapshots/yaks__tui__tests__detail_shows_children_and_links.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy (3)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (3)   ⭐  Starr

◂ Task: a0
│
│ Title:       Root A
│ Status:      hairy
│ Type:        task
│ Priority:    p2
│ Created:     -
│ Updated:     -
│ Labels:      -
│
│ Children:
│   🦬  a1  Child A1
│   🦬  a2  Child A2
h:list  j/k:move  Tab:link  Enter:follow  i/o:fwd/back  E:edit  D:dep  S
