src/tui/snapshots/yaks__tui__tests__edit_form_panel.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (1)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (1)   ⭐  Starr

◂ Edit e0
│   title       Editable
│   type         task bug feature idea
│   priority     p1 p2 p3 p4 p5
│   labels      rust, tui
│   source
│ ▸ description ───────────────────────────────────────────────────────
│ First line.
│ Second line.
│
│
Tab/↑↓ rows · ←→ chips · Ctrl-S save · EscEsc/Ctrl-C cancel
