src/tui/snapshots/yaks__tui__tests__family_indicator_on_tab_row.snap
---
source: src/tui/tests.rs
expression: "draw(&sample(), 100, 8)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starred (0)    family: ~remaining

 a0   p2 task     🦬  Root A
   a1 p3 task     🦬  Child A1



Tab:view  j/k:move  l:detail  h:family  v:views  c/C:new  E:edit  X:del  S:state  D:dep  f:filter  /
