src/tui/snapshots/yaks__tui__tests__filter_drawer_overlay.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy* (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Star

◂ Filter
│ ▸ status    hairy shaving shorn dead
│   type      task bug feature idea
│   priority  p1 p2 p3 p4 p5
│   labels   (any)
│   search   (any)
│   parent   (any)
│   deps      ready tangled inbox
│
│
│
│
│
↑↓/Tab rows · ←→ chips · Space toggle · C clear · Enter apply · EscEsc/C
