src/tui/snapshots/yaks__tui__tests__goto_jumped_to_detail.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr
→ b0
◂ Task: b0
│
│ Title:       Root B shaving
│ Status:      shaving
│ Type:        task
│ Priority:    p1
│ Created:     -
│ Updated:     -
│ Labels:      -
│
│
h:list  j/k:move  Tab:link  Enter:follow  i/o:fwd/back  E:edit  D:dep  S
