src/tui/snapshots/yaks__tui__tests__goto_picker_with_id_typed.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Ro │ Go to yak  (1 matches)
   a1 p3 task     🦬  Ch │ 🪒   b0 Root B shaving
                        │
                        │
                        │
                        │
                        │
                        │
                        │
                        │
                        │
search: b0
